src/coolcmp/unit_tests/Custom/type_checker/fail/self.cl
class Main inherits IO {
    self: SELF_TYPE;

    main(): SELF_TYPE {
        self
    };
};

class SELF_TYPE {};